src/test/deca/context/invalid/SansObjet/Cast-DeclVar-int-booleanLiteral.deca
// Description:
//    Declaration of a int variable using a int cast on a boolean literal .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.39) Illegal cast
// 
// Historique: 
//    cree le 14/01/2022 

{
    int x =  (int) (false) ; 
}
